--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "composer/installers": "^1.0.24",
         "wikimedia/composer-merge-plugin": "^1.4",
         "cweagans/composer-patches": "^1.6",
-        "drupal/apigee_edge": "^1.0"
+        "drupal/apigee_edge": "^1.0",
+        "drupal/swagger_ui_formatter": "^2.0"
     },
     "replace": {
         "drupal/core": "^8.7"
