--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "wikimedia/composer-merge-plugin": "^1.4",
         "cweagans/composer-patches": "^1.6",
         "drupal/apigee_edge": "^1.0",
-        "drupal/swagger_ui_formatter": "^2.0"
+        "drupal/swagger_ui_formatter": "^2.0",
+        "drupal/apigee_api_catalog": "^1.0@RC"
     },
     "replace": {
         "drupal/core": "^8.7"
